results/SVCOMP/specgen/log-StringBuilderChars06-2024_03_01_14_08_48.txt
public class StringBuilderChars06 {
    /*@ public normal_behavior
      @    requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
      @    ensures \result <==> buffer.toString().equals("detimiL eTlBffiiH"); @*/
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        buffer.reverse();
        return buffer.toString().equals("detimiL eTlBffiiH");
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars06.java:4: error: cannot find symbol
      @    ensures \result <==> buffer.toString().equals("detimiL eTlBffiiH"); @*/
                                ^
  symbol:   variable buffer
  location: class StringBuilderChars06
1 error

public class StringBuilderChars06 {
    private /*@ spec_public @*/ StringBuilder buffer;
    
    /*@ public normal_behavior
      @    requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
      @    assignable buffer;
      @    ensures \result <==> buffer.toString().equals("detimiL eTlBffiiH"); @*/
    public static boolean f(String arg) {
        buffer = new StringBuilder(arg);
        buffer.reverse();
        return buffer.toString().equals("detimiL eTlBffiiH");
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars06.java:6: error: non-static variable buffer cannot be referenced from a static context
      @    assignable buffer;
                      ^
/home/max/Documents/JMLGPT/tmp/StringBuilderChars06.java:7: error: non-static variable buffer cannot be referenced from a static context
      @    ensures \result <==> buffer.toString().equals("detimiL eTlBffiiH"); @*/
                                ^
/home/max/Documents/JMLGPT/tmp/StringBuilderChars06.java:9: error: non-static variable buffer cannot be referenced from a static context
        buffer = new StringBuilder(arg);
        ^
/home/max/Documents/JMLGPT/tmp/StringBuilderChars06.java:10: error: non-static variable buffer cannot be referenced from a static context
        buffer.reverse();
        ^
/home/max/Documents/JMLGPT/tmp/StringBuilderChars06.java:11: error: non-static variable buffer cannot be referenced from a static context
        return buffer.toString().equals("detimiL eTlBffiiH");
               ^
5 errors

public class StringBuilderChars06 {
    private /*@ spec_public @*/ StringBuilder buffer;
    
    /*@ public normal_behavior
      @    requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
      @    assignable buffer;
      @    ensures \result <==> buffer.toString().equals("detimiL eTlBffiiH"); @*/
    public boolean f(String arg) {
        buffer = new StringBuilder(arg);
        buffer.reverse();
        return buffer.toString().equals("detimiL eTlBffiiH");
    }
}
#
# There is insufficient memory for the Java Runtime Environment to continue.
# Native memory allocation (mmap) failed to map 47185920 bytes for committing reserved memory.
# An error report file with more information is saved as:
# /home/max/Documents/JMLGPT/hs_err_pid14469.log

